# ZeroMassPicoReadout

./: README.md
16ChannelBinary/: 16ChannelBinary.c  CMakeLists.txt  README.md
32ChannelMultiplexer/: 32ChannelMultiplexer.c  CMakeLists.txt  README.md
EightChannelMultiplexer/: CMakeLists.txt  README.md  eightChannelMultiplexer.c
SingleChannel/: CMakeLists.txt  CMakeLists.txt~  README.md  singleChannel.c  uart.c
SingleChannelBinary/: CMakeLists.txt  singleChannelBinary.c
